tests/ui/dyn-star/no-explicit-dyn-star-cast.stderr
error[E0658]: `dyn*` trait objects are experimental
  --> $DIR/no-explicit-dyn-star-cast.rs:5:16
   |
LL |     let dyn_i: dyn* Debug = i as dyn* Debug;
   |                ^^^^
   |
   = note: see issue #102425 <https://github.com/rust-lang/rust/issues/102425> for more information
   = help: add `#![feature(dyn_star)]` to the crate attributes to enable

error[E0658]: `dyn*` trait objects are experimental
  --> $DIR/no-explicit-dyn-star-cast.rs:5:34
   |
LL |     let dyn_i: dyn* Debug = i as dyn* Debug;
   |                                  ^^^^
   |
   = note: see issue #102425 <https://github.com/rust-lang/rust/issues/102425> for more information
   = help: add `#![feature(dyn_star)]` to the crate attributes to enable

error[E0606]: casting `usize` as `dyn* Debug` is invalid
  --> $DIR/no-explicit-dyn-star-cast.rs:5:29
   |
LL |     let dyn_i: dyn* Debug = i as dyn* Debug;
   |                             ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0606, E0658.
For more information about an error, try `rustc --explain E0606`.
